Handle some expression regressions. Explicitly use GNU cpp for preprocessing. Remove explicit debugging code. Change some variable names to be less confusing. Improve some comments. Improve indentation.

PR:		162211
		168785
MFC after:	2 weeks

Former-commit-id: 5cada6c9e36298247b403fadf2bd437fba271c31